[package]
name = "blocking_pool"
version = "0.1.0"
authors = ["KaiJewson <kai.jewson@gmail.com>"]
edition = "2018"
description = "A thread pool for running synchronous I/O in asynchronous applications"
repository = "https://github.com/KaiJewson/blocking_pool"
license = "MIT OR Apache-2.0"
keywords = ["threadpool", "async"]
categories = ["asynchronous", "concurrency"]

[dependencies]
completion-core = "0.2.0"

[dev-dependencies]
completion = "0.2.1"
criterion = "0.3.4"

[[bench]]
name = "bench"
harness = false
