[package]
name = "blocking_pool"
version = "0.2.0"
edition = "2018"
description = "A thread pool for running synchronous I/O in asynchronous applications"
repository = "https://github.com/SabrinaJewson/blocking_pool"
license = "MIT OR Apache-2.0"
keywords = ["threadpool", "async"]
categories = ["asynchronous", "concurrency"]

[dependencies]

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "bench"
harness = false
